projects/minikube-aws/ec2.tf
# ---------------------------------------------
# Key pair
# ---------------------------------------------
resource "aws_key_pair" "keypair" {
  key_name   = "${local.project}-keypair"
  public_key = file("./credential/minikube-aws-keypair.pub")

  tags = {
    Name    = "${local.project}-keypair"
    Project = local.project
  }
}

# ---------------------------------------------
# EC2 instance
# ---------------------------------------------
resource "aws_instance" "ec2" {
  ami                         = data.aws_ami.minikube_aws.id
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.public_subnet_1a.id
  associate_public_ip_address = true
  vpc_security_group_ids = [
    aws_security_group.ec2_sg.id
  ]
  key_name = aws_key_pair.keypair.key_name

  tags = {
    Name    = "${local.project}-ec2"
    Project = local.project
    Type    = "ec2"
  }
}

// AMI generated by https://github.com/takahiroaoki/packer-container
data "aws_ami" "minikube_aws" {
  most_recent = true
  owners      = ["self"]

  filter {
    name   = "name"
    values = ["minikube-aws-ami"]
  }
}
